--- a/template/view/html/common/navpage.html
+++ b/template/view/html/common/navpage.html
@@ -1,12 +1,20 @@
+<style>
+    .highlight-text {
+        color: #f7a81b !important;
+    }
+</style>
 <div class="club-login-details">
-    <div class="page-title">Club Details</div>
     <p class="image-sep"><img src="<?php echo $thumb_club; ?>"></p>
+    <hr class="featurette-divider">
+    <div class="page-title">Club Details</div>
     <hr class="featurette-divider">
     <p class="seprate-p">Rotary Club of
         <b><?php echo $club_name; ?></b></p>
 
     <p class="combine-p"><span><i class="fa fa-calendar-o"></i>
-            <?php echo $date; ?></span><span class="pull-right"><i class="fa fa-trophy"></i> 250</span></p>
+            <?php echo $date; ?></span><span class="pull-right"><a href="javascript:;" class="highlight-text"
+                data-toggle="tooltip" title="" data-original-title="Club Total Points"><i class="fa fa-trophy"></i>
+                <?php echo $total_point_members + $total_point_trfs + $total_point_projects; ?></a></span></p>
     <p class="combine-p"><span><i class="fa fa-phone"></i> <a href="tel:<?php echo $mobile; ?>">
                 <?php echo $mobile; ?></a></span></p>
     <p class="combine-p"><span><i class="fa fa-envelope-o"></i><a href="mailto:<?php echo $email; ?>">
@@ -27,9 +35,9 @@
             <li>
                 <a href="<?php echo $add_data; ?>"><?php echo $text_add_data; ?></a>
             </li>
-            <li><a href="<?php echo $member; ?>"><?php echo $text_member; ?></a></li>
+            <!-- <li><a href="<?php echo $member; ?>"><?php echo $text_member; ?></a></li>
             <li><a href="<?php echo $trf; ?>"><?php echo $text_trf; ?></a></li>
-            <li><a href="<?php echo $project; ?>"><?php echo $text_project; ?></a></li>
+            <li><a href="<?php echo $project; ?>"><?php echo $text_project; ?></a></li> -->
             <li><a href="<?php echo $profile; ?>"><?php echo $text_profile; ?></a></li>
             <li><a href="<?php echo $logout; ?>"><?php echo $text_logout; ?></a></li>
         </ul>
@@ -43,9 +51,9 @@
         <li>
             <a href="<?php echo $add_data; ?>"><?php echo $text_add_data; ?></a>
         </li>
-        <li><a href="<?php echo $member; ?>"><?php echo $text_member; ?></a></li>
+        <!-- <li><a href="<?php echo $member; ?>"><?php echo $text_member; ?></a></li>
         <li><a href="<?php echo $trf; ?>"><?php echo $text_trf; ?></a></li>
-        <li><a href="<?php echo $project; ?>"><?php echo $text_project; ?></a></li>
+        <li><a href="<?php echo $project; ?>"><?php echo $text_project; ?></a></li> -->
         <li><a href="<?php echo $profile; ?>"><?php echo $text_profile; ?></a></li>
         <li><a href="<?php echo $logout; ?>"><?php echo $text_logout; ?></a></li>
     </ul>
