--- a/template/view/html/club/member.html
+++ b/template/view/html/club/member.html
@@ -33,10 +33,10 @@
                                     </div>
                                     <div class="club-page-content">
                                         <div class="form-title">
-                                            <a href="<?php echo $add_member; ?>" data-toggle="tooltip" title=""
+                                            <!-- <a href="<?php echo $add_member; ?>" data-toggle="tooltip" title=""
                                                 class="btn btn-login btn-sm btn-bold"
                                                 data-original-title="Add New Members"><i class="fa fa-plus"></i> Add New
-                                                Members</a>
+                                                Members</a> -->
                                         </div>
                                         <div class="table-design-row">
                                             <table id="example1" class="table table-bordered table-striped">
