--- a/template/view/html/club/trf.html
+++ b/template/view/html/club/trf.html
@@ -33,10 +33,10 @@
                                     </div>
                                     <div class="club-page-content">
                                         <div class="form-title">
-                                            <a href="<?php echo $add_trf; ?>" data-toggle="tooltip" title=""
+                                            <!-- <a href="<?php echo $add_trf; ?>" data-toggle="tooltip" title=""
                                                 class="btn btn-login btn-sm btn-bold"
                                                 data-original-title="Add TRF Contribution"><i class="fa fa-plus"></i>
-                                                Add TRF Contribution</a>
+                                                Add TRF Contribution</a> -->
                                         </div>
                                         <div class="table-design-row">
                                             <table id="example1" class="table table-bordered table-striped">
