--- a/admin/view/html/catalog/approve_list.html
+++ b/admin/view/html/catalog/approve_list.html
@@ -83,7 +83,7 @@
                                         </div>
                                         <!-- /.card-header -->
                                         <div class="card-body">
-                                            <form action="<?php echo $delete; ?>" method="POST" enctype="multipart/form-data"
+                                            <form action="" method="POST" enctype="multipart/form-data"
                                                   id="form-team-group">
                                                 <div class="table-responsive">
                                                     <table id="table_team" class="table table-bordered table-hover">
@@ -151,7 +151,7 @@
                                         </div>
                                         <!-- /.card-header -->
                                         <div class="card-body">
-                                            <form action="<?php echo $delete; ?>" method="POST" enctype="multipart/form-data"
+                                            <form action="" method="POST" enctype="multipart/form-data"
                                                   id="form-team-group">
                                                 <div class="table-responsive">
                                                     <table id="table_team" class="table table-bordered table-hover">
@@ -214,14 +214,12 @@
                                         </div>
                                         <!-- /.card-header -->
                                         <div class="card-body">
-                                            <form action="<?php echo $delete; ?>" method="POST" enctype="multipart/form-data"
+                                            <form action="" method="POST" enctype="multipart/form-data"
                                                   id="form-team-group">
                                                 <div class="table-responsive">
                                                     <table id="table_team" class="table table-bordered table-hover">
                                                         <thead>
                                                             <tr>
-                                                                <th style="width: 1px;" class="text-center no-sort"><input type="checkbox"
-                                                                                                                           onclick="$('input[name*=\'selected\']').trigger('click');" /></th>
                                                                 <th>Month</th>
                                                                 <th>Members Inducted </th>
                                                                 <th>Members Unlisted </th>
@@ -237,16 +235,6 @@
                                                             <?php if($members) : ?>
                                                             <?php foreach($members as $member) : ?>
                                                             <tr>
-                                                                <td class="text-center">
-                                                                    <?php if(in_array($member['member_id'], $selected)) : ?>
-                                                                    <input type="checkbox" name="selected[]"
-                                                                           value="<?php echo $member['member_id']; ?>"
-                                                                           checked="checked" />
-                                                                    <?php else : ?>
-                                                                    <input type="checkbox" name="selected[]"
-                                                                           value="<?php echo $member['member_id']; ?>" />
-                                                                    <?php endif; ?>
-                                                                </td>
                                                                 <td class="text-left">
                                                                     <?php echo $member['date']; ?>
                                                                 </td>
