--- a/template/view/html/club/trf.html
+++ b/template/view/html/club/trf.html
@@ -30,6 +30,9 @@
                                 <div class="about-page-content">
                                     <div class="page-title">
                                         TRF Contribution List
+                                        <a href="<?php echo $cancel; ?>" data-toggle="tooltip" title=""
+                                            class="btn btn-login btn-sm btn-bold btn-table" data-original-title="Back"
+                                            style="float: right !important;"><i class="fa fa-reply"></i></a>
                                     </div>
                                     <div class="club-page-content">
                                         <div class="form-title">
