--- a/template/view/html/club/project.html
+++ b/template/view/html/club/project.html
@@ -30,6 +30,9 @@
                                 <div class="about-page-content">
                                     <div class="page-title">
                                         Projects List
+                                        <a href="<?php echo $cancel; ?>" data-toggle="tooltip" title=""
+                                            class="btn btn-login btn-sm btn-bold btn-table" data-original-title="Back"
+                                            style="float: right !important;"><i class="fa fa-reply"></i></a>
                                     </div>
                                     <div class="club-page-content">
                                         <div class="form-title">
@@ -37,6 +40,7 @@
                                                 class="btn btn-login btn-sm btn-bold"
                                                 data-original-title="Add New Project"><i class="fa fa-plus"></i>
                                                 Add New Project</a> -->
+
                                         </div>
                                         <div class="table-design-row">
                                             <table id="example1" class="table table-bordered table-striped">
