--- a/admin/view/html/catalog/club_form.html
+++ b/admin/view/html/catalog/club_form.html
@@ -91,7 +91,7 @@
                                     <?php endif; ?>
                                 </div>
                             </div>
-                            
+
                             <div class="form-group row">
                                 <label for="input-austin-governor" class="col-sm-2 col-form-label">
                                     <?php echo $entry_austin_governor; ?></label>
@@ -112,7 +112,7 @@
                                     </select>
                                 </div>
                             </div>
-                            
+
                             <div class="form-group row required">
                                 <label for="input-name" class="col-sm-2 col-form-label">
                                     <?php echo $entry_name; ?></label>
@@ -250,20 +250,43 @@
                             </div>
 
                             <div class="form-group row">
+                                <label for="input-club" class="col-sm-2 col-form-label">
+                                    <?php echo $entry_parent; ?></label>
+
+                                <div class="col-sm-10">
+                                    <select name="parent_id" class="form-control" id="input-club">
+                                        <option value="0">
+                                            None
+                                        </option>
+                                        <?php foreach($clubs as $club) : ?>
+                                        <?php if($club['club_id'] == $club_id) : ?>
+                                        <option value="<?php echo $club['club_id']; ?>" selected="selected">
+                                            <?php echo $club['club_name']; ?>
+                                        </option>
+                                        <?php else : ?>
+                                        <option value="<?php echo $club['club_id']; ?>">
+                                            <?php echo $club['club_name']; ?>
+                                        </option>
+                                        <?php endif; ?>
+                                        <?php endforeach; ?>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group row">
                                 <label for="input-status" class="col-sm-2 col-form-label">
                                     <?php echo $entry_status; ?></label>
 
-                                 <div class="col-sm-10">
-                                        <select name="status" id="input-status" class="form-control">
-                                            <?php if($status) :?>
-                                            <option value="1" selected="selected"><?php echo $text_enabled; ?></option>
-                                            <option value="0"><?php echo $text_disabled; ?></option>
-                                            <?php else : ?>
-                                            <option value="1"><?php echo $text_enabled; ?></option>
-                                            <option value="0" selected="selected"><?php echo $text_disabled; ?></option>
-                                            <?php endif; ?>
-                                        </select>
-                                    </div>
+                                <div class="col-sm-10">
+                                    <select name="status" id="input-status" class="form-control">
+                                        <?php if($status) :?>
+                                        <option value="1" selected="selected"><?php echo $text_enabled; ?></option>
+                                        <option value="0"><?php echo $text_disabled; ?></option>
+                                        <?php else : ?>
+                                        <option value="1"><?php echo $text_enabled; ?></option>
+                                        <option value="0" selected="selected"><?php echo $text_disabled; ?></option>
+                                        <?php endif; ?>
+                                    </select>
+                                </div>
                             </div>
                         </div>
                         <!-- /.box-body -->
@@ -279,10 +302,3 @@
 </div>
 <!-- /.content-wrapper -->
 <?php echo $footer; ?>
-<script type="text/javascript">
-    $('textarea[data-toggle=\'ckeditor\']').ckeditor();
-
-    $('input[name=\'icon\']').iCheck({
-        radioClass: 'iradio_square-blue'
-    });
-</script>
